--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "types": ["node", "@testing-library/jest-dom", "vitest/globals"],
     "plugins": [
       {
         "name": "next"
@@ -22,6 +23,14 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts", 
+    "**/*.ts", 
+    "**/*.tsx", 
+    ".next/types/**/*.ts", 
+    "vitest.config.ts", 
+    "vitest.setup.ts",
+    "socket.io-mock.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
